    to Nikolay Derkach!
  * Add OpenSUSE spec file, init script, and RPM packaging backend. Thanks to
    Nikolay Derkach!
  * apport_python_hook.py, bin/apport: Create files in a race free way to
    avoid symlink attacks. Thanks to Sebastian Kramer <krahmer@novell.com> for
    finding them!
  * problem_report.py test suite: Create debugging leftover which left /tmp/r
    behind.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Nov 2008 18:12:23 +0100

apport (0.119) intrepid; urgency=low

  * debian/apport.default: Disable Apport by default for the final release.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 23 Oct 2008 09:34:41 +0200

apport (0.118) intrepid; urgency=low

  * apport/hookutils.py: add attach_gconf() function to add non-default gconf
    settings to a report

 -- Matt Zimmerman <mdz@ubuntu.com>  Mon, 13 Oct 2008 20:10:33 +0100

apport (0.117) intrepid; urgency=low

  * backends/packaging-apt-dpkg.py, is_distro_package(): Fix crash if
    apt.Cache()[pkg].origins is None. (LP: #279353)
  * bin/apport: Log that we are ignoring SIGABRT, since it is a common cause
    of confusion.
  * test-apport, create_test_process(): Fix race condition: wait until the
    child process has fully execve()ed, to avoid coredumping it while it is
    still running as test-apport process.
  * apport/crashdb_impl/launchpad.py, update(): Set source package of a bug if
    the reporter removed it and the task is against 'Ubuntu'. (LP: #269045)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 07 Oct 2008 16:38:06 +0200

apport (0.116) intrepid; urgency=low

  * Update AUTHORS and debian/copyright, Michael and Troy released their
    copyright to Canonical. Properly attribute them as authors in the
    respective files.
  * debian/local/ubuntu-bug: Fix quoting of the command line arguments, so
    that several options do not end up as one big argument when being passed
    to apport-{cli,gtk,qt}. This also repairs launchpad-integration.
    (LP: #260242)
